cmake_minimum_required(VERSION 3.13FATAL_ERROR)

set(ProjName rep2)
project(${ProjName})

add_executable(${ProjName} src/main.cpp)

set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)

add_subdirectory(external/glfw)
target_link_libraries(${ProjName} glfw)

add_subdirectory(external/glad)
target_link_libraries(${ProjName} glad)